# jengine

./: .gitignore  CMakeLists.txt  Display.cpp  Display.h  JEngine.h  LICENSE.MD  Mesh.cpp  Mesh.h  OpenGL.h  Quad.h  README.MD  TODO  TexturedMesh.h  TexturedQuad.h  Vertex2.cpp  Vertex2.h  index.html  style.css
Audio/: Audio.cpp  Audio.h  AudioData.h  Mp3Data.cpp  Mp3Data.h  Playlist.cpp  Playlist.h  Sound.cpp  Sound.h  WaveData.cpp  WaveData.h
Game/: BaseGame.cpp  BaseGame.h  Game.cpp  Game.h
Graphics/: Animate.cpp  Animate.h  BasicQuad.cpp  BasicQuad.h  Display.cpp  Display.h  Font.cpp  Font.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OpenGL.h  Quad.cpp  Quad.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Spritesheet.cpp  Spritesheet.h  TextGroup.cpp  TextGroup.h  TexturedMesh.cpp  TexturedMesh.h  TexturedQuad.cpp  TexturedQuad.h
Graphics/Shaders/: Shader.cpp  Shader.h
Graphics/UI/: TextField.cpp  TextField.h
Input/: Controller.cpp  Controller.h
Math/: Vector.h  Vector2.h  Vector3.h
Util/: Bitmask.cpp  Bitmask.h  File.cpp  File.h  Logger.cpp  Logger.h  Ref.h  Timer.cpp  Timer.h
test/: Makefile  _test.cpp  test  test.cpp
